--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -38,6 +38,93 @@ set.seed(2018)
 ```
 
 
+```{r chapter6-load-data, echo = FALSE}
+
+rats <- read.csv(here("data/rats.csv"))
+
+rats %<>% mutate(
+  id = factor(id),
+  group = factor(group),
+  weeks = factor(weeks)
+)
+
+
+```
+
+```{r rats-overview, echo = FALSE}
+skim(rats)
+```
+
+
+## Figure 8.1
+
+```{r rats-81, echo = false}
+ggplot(rats, aes(x = time, y = rats, linetype = id)) + 
+  geom_line() + scale_linetype_manual(values = rep(1:10, times=4)) + 
+  facet_grid(. ~ group, labeller = label_both) +
+  theme_minimal() + theme(legend.position = "none") +
+  theme(panel.grid.minor.y = element_blank()) +
+  scale_y_continuous(limits = c(min(rats$rats), max(rats$rats)))
+
+```
+\pagebreak
+
+## Figure 8.2
+
+```{r Figure 8.2, echo=TRUE}
+# Standardise the scores:
+BPRSL <- BPRSL %>%
+  group_by(week) %>%
+  mutate( stdbprs = (bprs - mean(bprs))/sd(bprs) ) %>%
+  ungroup()
+glimpse(BPRSL)
+p1 <- ggplot(BPRSL, aes(x = week, y = stdbprs, linetype = subject))
+p2 <- p1 + geom_line() + scale_linetype_manual(values = rep(1:10, times=4))
+p3 <- p2 + facet_grid(. ~ treatment, labeller = label_both)
+p4 <- p3 + theme_bw() + theme(legend.position = "none")
+p5 <- p4 + theme(panel.grid.minor.y = element_blank())
+p6 <- p5 + scale_y_continuous(name = "standardized bprs")
+p6
+```
+\pagebreak
+
+## Figure 8.3
+
+```{r Figure 8.3, echo=TRUE}
+# Make a summary data:
+n <- length(0:8) # weeks, incl. baseline (0)
+BPRSS <- BPRSL %>%
+  group_by(treatment, week) %>%
+  summarise( mean=mean(bprs), se=sd(bprs)/sqrt(n) ) %>%
+  ungroup()
+glimpse(BPRSS)
+p1 <- ggplot(BPRSS, aes(x = week, y = mean, linetype = treatment, shape = treatment))
+p2 <- p1 + geom_line() + scale_linetype_manual(values = c(1,2))
+p3 <- p2 + geom_point(size=3) + scale_shape_manual(values = c(1,2))
+p4 <- p3 + geom_errorbar(aes(ymin=mean-se, ymax=mean+se, linetype="1"), width=0.3)
+p5 <- p4 + theme_bw() + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+p6 <- p5 + theme(legend.position = c(0.8,0.8))
+p7 <- p6 + scale_y_continuous(name = "mean(bprs) +/- se(bprs)")
+p7
+```
+\pagebreak
+
+## Figure 8.4
+
+```{r Figure 8.4, echo=TRUE}
+p1 <- ggplot(BPRSL, aes(x = factor(week), y = bprs, fill = treatment))
+p2 <- p1 + geom_boxplot(position = position_dodge(width = 0.9))
+p3 <- p2 + theme_bw() + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+p4 <- p3 + theme(legend.position = c(0.8,0.8))
+p5 <- p4 + scale_x_discrete(name = "week")
+# Black & White version:
+#p6 <- p5 + scale_fill_grey(start = 0.5, end = 1)
+p5
+```
+
+
+
+
 
 ```{r chapter9-generic-instruction, echo = FALSE}
 # Implement the analyses of Chapter 9 of MABS using the BPRS data. (0-8 points)
