--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -71,20 +71,21 @@ ggplot(rats, aes(x = time, y = rats, linetype = id)) +
 
 ## Figure 8.2
 
-```{r Figure 8.2, echo=TRUE}
+```{r rats-82, echo=false}
 # Standardise the scores:
-BPRSL <- BPRSL %>%
-  group_by(week) %>%
-  mutate( stdbprs = (bprs - mean(bprs))/sd(bprs) ) %>%
+rats_standardized <- rats %>%
+  group_by(time) %>%
+  mutate(stdrats = (rats - mean(rats))/sd(rats)) %>%
   ungroup()
-glimpse(BPRSL)
-p1 <- ggplot(BPRSL, aes(x = week, y = stdbprs, linetype = subject))
-p2 <- p1 + geom_line() + scale_linetype_manual(values = rep(1:10, times=4))
-p3 <- p2 + facet_grid(. ~ treatment, labeller = label_both)
-p4 <- p3 + theme_bw() + theme(legend.position = "none")
-p5 <- p4 + theme(panel.grid.minor.y = element_blank())
-p6 <- p5 + scale_y_continuous(name = "standardized bprs")
-p6
+
+skim(rats_standardized)
+ggplot(rats_standardized , aes(x = time, y = stdrats, linetype = id)) + 
+  geom_line() + scale_linetype_manual(values = rep(1:10, times = 4)) +
+  facet_grid(. ~ group, labeller = label_both) +
+  theme_minimal() + theme(legend.position = "none") +
+  theme(panel.grid.minor.y = element_blank()) +
+  scale_y_continuous(name = "standardized rats")
+
 ```
 \pagebreak
 
