--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -58,7 +58,7 @@ skim(rats)
 
 ## Figure 8.1
 
-```{r rats-81, echo = false}
+```{r rats-81, echo = FALSE}
 ggplot(rats, aes(x = time, y = rats, linetype = id)) + 
   geom_line() + scale_linetype_manual(values = rep(1:10, times=4)) + 
   facet_grid(. ~ group, labeller = label_both) +
@@ -71,15 +71,15 @@ ggplot(rats, aes(x = time, y = rats, linetype = id)) +
 
 ## Figure 8.2
 
-```{r rats-82, echo=false}
+```{r rats-82, echo=FALSE}
 # Standardise the scores:
-rats_standardized <- rats %>%
+rats %<>%
   group_by(time) %>%
   mutate(stdrats = (rats - mean(rats))/sd(rats)) %>%
   ungroup()
 
-skim(rats_standardized)
-ggplot(rats_standardized , aes(x = time, y = stdrats, linetype = id)) + 
+skim(rats)
+ggplot(rats , aes(x = time, y = stdrats, linetype = id)) + 
   geom_line() + scale_linetype_manual(values = rep(1:10, times = 4)) +
   facet_grid(. ~ group, labeller = label_both) +
   theme_minimal() + theme(legend.position = "none") +
@@ -91,7 +91,7 @@ ggplot(rats_standardized , aes(x = time, y = stdrats, linetype = id)) +
 
 ## Figure 8.3
 
-```{r rats-83, echo=false}
+```{r rats-83, echo=FALSE}
 # Make a summary data:
 n <- length(0:8) # weeks, incl. baseline (0)
 rats_summary <- rats %>%
@@ -113,19 +113,20 @@ ggplot(rats_summary, aes(x = time, y = mean, linetype = group, shape = group)) +
   theme(legend.position = c(0.8,0.8)) +
   scale_y_continuous(name = "mean(rats) +/- se(rats)")
 ```
-\pagebreak
 
 ## Figure 8.4
 
-```{r Figure 8.4, echo=TRUE}
-p1 <- ggplot(BPRSL, aes(x = factor(week), y = bprs, fill = treatment))
-p2 <- p1 + geom_boxplot(position = position_dodge(width = 0.9))
-p3 <- p2 + theme_bw() + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
-p4 <- p3 + theme(legend.position = c(0.8,0.8))
-p5 <- p4 + scale_x_discrete(name = "week")
-# Black & White version:
-#p6 <- p5 + scale_fill_grey(start = 0.5, end = 1)
-p5
+```{r rats-8-4, echo = FALSE}
+ggplot(rats, aes(x = factor(time), y = rats, fill = group)) +
+  geom_boxplot(position = position_dodge(width = 0.9)) +
+  theme_minimal() + 
+  theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank()
+  ) +
+  theme(legend.position = c(0.8,0.8)) +
+  scale_x_discrete(name = "week")
+
 ```
 
 
