--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -38,7 +38,7 @@ set.seed(2018)
 ```
 
 
-```{r chapter6-load-data, echo = FALSE, message=FALSE}
+```{r chapter6-load-data-rats, echo = FALSE, message=FALSE}
 
 rats <- fread(here("data/rats.csv"))
 rats_raw <- fread(here("data/rats.txt"))
@@ -189,7 +189,9 @@ ggplot(rats_post, aes(x = group, y = mean)) +
 
 ```{r Table 8.3, echo=TRUE}
 # Without the outlier, apply Student's t-test, two-sided:
-t.test(mean ~ group, data = rats_post, var.equal = TRUE)
+
+fit = lm(formula = mean ~ group, data=rats_post)
+anova(fit)
 ```
 
 ## Table 8.4
@@ -208,5 +210,122 @@ anova(fit)
 
 ```{r chapter9-generic-instruction, echo = FALSE}
 # Implement the analyses of Chapter 9 of MABS using the BPRS data. (0-8 points)
+```
+
+```{r chapter6-load-data-bprs, echo = FALSE, message=FALSE}
+
+bprs <- fread(here("data/bprs.csv"))
+bprs_raw <- fread(here("data/bprs.txt"))
+rats_raw %<>% select(-V1)
+
+bprs %<>% mutate(
+  subject = factor(subject),
+  treatment = factor(treatment),
+  weeks = factor(weeks)
+)
+
+
+```
+
+```{r bprs-overview, echo = FALSE}
+skim(bprs)
+```
+
+## Figure 9.1
+
+```{r, echo = FALSE, fig.height=5, fig.width=3}
+ggplot(bprs, aes(x = week, y = bprs, group = subject)) +
+  geom_text(aes(label = treatment)) +
+  scale_x_continuous(name = "Time (weeks)", breaks = seq(0, 8, 1)) +
+  scale_y_continuous(name = "BPRS") +
+  theme_bw() +
+  theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank()
+    )
+```
+\pagebreak
+
+## Table 9.3
+
+```{r, echo=TRUE}
+RATS_reg <- lm(Weight ~ Time + Group, data = RATSL)
+summary(RATS_reg)
+# dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
+```
+\pagebreak
+
+## Figure 9.2
+
+```{r, echo=TRUE}
+p1 <- ggplot(RATSL, aes(x = Time, y = Weight, group = ID))
+p2 <- p1 + geom_line(aes(linetype = Group))
+p3 <- p2 + scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 10))
+p4 <- p3 + scale_y_continuous(name = "Weight (grams)")
+p5 <- p4 + theme_bw() + theme(legend.position = "top")
+p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+p6
+```
+\pagebreak
+
+## Figure 9.3
+
+```{r, echo=TRUE, fig.width=10, fig.height=10}
+pairs(RATS[, 3:13], cex = 0.7)
+```
+\pagebreak
+
+## Table 9.4
+
+```{r, echo=TRUE}
+library("lme4")
+RATS_ref <- lmer(Weight ~ Time + Group + (1 | ID), data = RATSL, REML = FALSE)
+summary(RATS_ref)
+# dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
+```
+\pagebreak
+
+## Table 9.5
+
+```{r, echo=TRUE}
+RATS_ref1 <- lmer(Weight ~ Time + Group + (Time | ID), data = RATSL, REML = FALSE)
+summary(RATS_ref1)
+# dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
+anova(RATS_ref1, RATS_ref)
+```
+\pagebreak
+
+## Table 9.6
+
+```{r, echo=TRUE}
+RATS_ref2 <- lmer(Weight ~ Time * Group + (Time | ID), data = RATSL, REML = FALSE)
+summary(RATS_ref2)
+# dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
+anova(RATS_ref1, RATS_ref2)
+```
+\pagebreak
+
+## Figure 9.4
+
+```{r, echo=TRUE, fig.width=3, fig.height=4}
+Fitted <- fitted(RATS_ref2)
+RATSL <- RATSL %>% mutate(Fitted)
+p1 <- ggplot(RATSL, aes(x = Time, y = Weight, group = ID))
+p2 <- p1 + geom_line(aes(linetype = Group))
+p3 <- p2 + scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 20))
+p4 <- p3 + scale_y_continuous(name = "Weight (grams)")
+p5 <- p4 + theme_bw() + theme(legend.position = "right") # "none" in the book
+p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+p7 <- p6 + ggtitle("Observed")
+graph1 <- p7
+p1 <- ggplot(RATSL, aes(x = Time, y = Fitted, group = ID))
+p2 <- p1 + geom_line(aes(linetype = Group))
+p3 <- p2 + scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 20))
+p4 <- p3 + scale_y_continuous(name = "Weight (grams)")
+p5 <- p4 + theme_bw() + theme(legend.position = "right")
+p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+p7 <- p6 + ggtitle("Fitted")
+graph2 <- p7
+graph1; graph2
 ```
 
