Added models for BPRS

--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -66,7 +66,10 @@ ggplot(rats, aes(x = time, y = rats, linetype = id)) +
   facet_grid(. ~ group, labeller = label_both) +
   theme_minimal() + theme(legend.position = "none") +
   theme(panel.grid.minor.y = element_blank()) +
-  scale_y_continuous(limits = c(min(rats$rats), max(rats$rats)))
+  scale_y_continuous(
+    limits = c(min(rats$rats), max(rats$rats)),
+    name = "weight (g)")
+
 
 ```
 \pagebreak
@@ -86,7 +89,7 @@ ggplot(rats , aes(x = time, y = stdrats, linetype = id)) +
   facet_grid(. ~ group, labeller = label_both) +
   theme_minimal() + theme(legend.position = "none") +
   theme(panel.grid.minor.y = element_blank()) +
-  scale_y_continuous(name = "standardized rats")
+  scale_y_continuous(name = "standardized weight")
 
 ```
 \pagebreak
@@ -134,7 +137,7 @@ ggplot(rats, aes(x = factor(time), y = rats, fill = group)) +
 ## Figure 8.5
 
 
-```{r rats-8-5, echo=TFALSE}
+```{r rats-8-5, echo=FALSE}
 # Make a summary data of the post treatment weeks (8<)
 rats_post <- rats %>%
   filter(time > 1) %>%
@@ -144,7 +147,8 @@ rats_post <- rats %>%
 glimpse(rats_post)
 
 ggplot(rats_post, aes(x = group, y = mean)) +
-  geom_boxplot() +
+  geom_violin(draw_quantiles = c(0.25, 0.5, 0.75)) +
+  geom_jitter(height = 0, width = 0.1, size = 0.7) + 
   theme_bw() + 
   theme(
     panel.grid.major = element_blank(),
@@ -154,8 +158,8 @@ ggplot(rats_post, aes(x = group, y = mean)) +
     fun.y = "mean",
     geom = "point",
     shape = 23,
-    size = 4,
-    fill = "white"
+    size = 3,
+    fill = "red"
     ) +
   scale_y_continuous(name = "mean(rats), weeks 8<")
 
@@ -163,12 +167,13 @@ ggplot(rats_post, aes(x = group, y = mean)) +
 
 ## Figure 8.6
 
-```{r rats-8-6, echo=FALSE}
+```{r rats-8-6, echo=FALSE, fig.width = 3, fig.height=4}
 # Remove the outlier:
 rats_post %<>% filter(mean < 550)
 glimpse(rats_post)
 ggplot(rats_post, aes(x = group, y = mean)) +
-  geom_boxplot() +
+  geom_violin(draw_quantiles = c(0.25, 0.5, 0.75)) +
+  geom_jitter(height = 0, width = 0.1, size = 0.7) +
   theme_bw() + 
   theme(
     panel.grid.major = element_blank(),
@@ -178,7 +183,7 @@ ggplot(rats_post, aes(x = group, y = mean)) +
     fun.y = "mean",
     geom = "point",
     shape = 23,
-    size = 4,
+    size = 3,
     fill = "white"
     ) +
   scale_y_continuous(name = "mean(rats), weeks 8>")
@@ -244,7 +249,7 @@ ggplot(bprs, aes(x = week, y = bprs, group = subject)) +
     panel.grid.minor = element_blank()
     )
 ```
-\pagebreak
+
 
 ## Table 9.3
 
@@ -256,9 +261,9 @@ summary(bprs_lm)
 
 ## Figure 9.2
 
-```{r, echo=TRUE, fig.height=10, fig.width=4}
-ggplot(bprs, aes(x = week, y = bprs, group = treatment)) +
-  geom_line(aes(linetype = treatment)) +
+```{r, echo=TRUE}
+ggplot(bprs, aes(x = week, y = bprs, linetype = subject)) +
+  geom_line(aes(linetype = subject)) +
   scale_x_continuous(name = "Time (days)", breaks = seq(0, 8, 1)) +
   scale_y_continuous(name = "BRRS") +
   theme_bw() + theme(legend.position = "top") +
@@ -266,7 +271,7 @@ ggplot(bprs, aes(x = week, y = bprs, group = treatment)) +
     panel.grid.major = element_blank(),
     panel.grid.minor = element_blank()
   ) +
-  facet_grid(rows = vars(subject))
+  facet_grid(. ~ treatment, labeller = label_both)
 
 ```
 \pagebreak
@@ -274,7 +279,7 @@ ggplot(bprs, aes(x = week, y = bprs, group = treatment)) +
 ## Figure 9.3
 
 ```{r, echo=TRUE, fig.width=10, fig.height=10}
-pairs(bprs_raw[, 3:11], cex = 0.7, col=factor(bprs_raw$treatment))
+pairs(bprs_raw[, 3:11], cex = 0.9, col=factor(bprs_raw$treatment))
 ```
 \pagebreak
 
@@ -282,46 +287,51 @@ pairs(bprs_raw[, 3:11], cex = 0.7, col=factor(bprs_raw$treatment))
 
 ```{r, echo=TRUE}
 library("lme4")
-RATS_ref <- lmer(Weight ~ Time + Group + (1 | ID), data = RATSL, REML = FALSE)
-summary(RATS_ref)
+bprs_ref <- lmer(bprs ~ week + treatment + (1 | subject), data = bprs, REML = FALSE)
+summary(bprs_ref)
 # dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
 ```
-\pagebreak
+
 
 ## Table 9.5
 
 ```{r, echo=TRUE}
-RATS_ref1 <- lmer(Weight ~ Time + Group + (Time | ID), data = RATSL, REML = FALSE)
-summary(RATS_ref1)
+bprs_ref1 <- lmer(bprs ~ week + treatment + (week | subject), data = bprs, REML = FALSE)
+summary(bprs_ref1)
 # dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
-anova(RATS_ref1, RATS_ref)
+anova(bprs_ref1, bprs_ref)
 ```
 \pagebreak
 
 ## Table 9.6
 
 ```{r, echo=TRUE}
-RATS_ref2 <- lmer(Weight ~ Time * Group + (Time | ID), data = RATSL, REML = FALSE)
-summary(RATS_ref2)
+bprs_ref2 <- lmer(bprs ~ week * treatment + (week | subject), data = bprs, REML = FALSE)
+summary(bprs_ref2)
 # dummies (in Table) vs summary output: D1 = Group2, D2 = Group3
-anova(RATS_ref1, RATS_ref2)
+anova(bprs_ref1, bprs_ref2)
 ```
-\pagebreak
 
 ## Figure 9.4
 
 ```{r, echo=TRUE, fig.width=3, fig.height=4}
-Fitted <- fitted(RATS_ref2)
-RATSL <- RATSL %>% mutate(Fitted)
-p1 <- ggplot(RATSL, aes(x = Time, y = Weight, group = ID))
-p2 <- p1 + geom_line(aes(linetype = Group))
-p3 <- p2 + scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 20))
-p4 <- p3 + scale_y_continuous(name = "Weight (grams)")
-p5 <- p4 + theme_bw() + theme(legend.position = "right") # "none" in the book
-p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
-p7 <- p6 + ggtitle("Observed")
-graph1 <- p7
-p1 <- ggplot(RATSL, aes(x = Time, y = Fitted, group = ID))
+bprs_fitted <- fitted(bprs_ref2)
+bprs %<>% mutate(bprs_fitted)
+
+graph1 <- 
+  ggplot(bprs, aes(x = week, y = bprs, group = subject)) +
+  geom_line(aes(linetype = treatment)) +
+  scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 20)) +
+  scale_y_continuous(name = "Weight (grams)") +
+  theme_bw() + theme(legend.position = "right") +
+  theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank()
+    ) +
+  ggtitle("Observed")
+
+graph2 <- 
+  ggplot(bprs, aes(x = week, y = Fitted, group = subject))
 p2 <- p1 + geom_line(aes(linetype = Group))
 p3 <- p2 + scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 20))
 p4 <- p3 + scale_y_continuous(name = "Weight (grams)")
